Bearer-service configuration

--- a/BearerJWT/appsettings.json
+++ b/BearerJWT/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JwtSettings": {
+    "Issuer": "https://nonexistingwebsiteforsure.com",
+    "Audience": "https://nonexistingwebsiteforsure.com",
+    "Key": "SuperSaveStorageKey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
