Adding basic Authentication

--- a/BearerJWT/appsettings.json
+++ b/BearerJWT/appsettings.json
@@ -2,7 +2,7 @@
   "JwtSettings": {
     "Issuer": "https://nonexistingwebsiteforsure.com",
     "Audience": "https://nonexistingwebsiteforsure.com",
-    "Key": "SuperSaveStorageKey"
+    "Key": "SuperSaveStorageKey_xjhjijlkjjlkjlkjljlk"
   },
   "Logging": {
     "LogLevel": {
